--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/js/base.js": "/js/base.js",
     "/css/app.css": "/css/app.css",
     "/assets/favicon.png": "/assets/favicon.png",
+    "/assets/icon.png": "/assets/icon.png",
     "/assets/logo-icon.png": "/assets/logo-icon.png",
     "/assets/logo.png": "/assets/logo.png"
 }
