--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "socialiteproviders/vkontakte": "^4.2",
         "socialiteproviders/yandex": "^4.1",
         "socialiteproviders/zoho": "^4.1",
-        "tcg/voyager": "^1.4"
+        "tcg/voyager": "^1.4",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
