--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "vee-validate": "^3.4.10",
         "vform": "^2.1.0",
-        "vue-fragment": "^1.5.2"
+        "vue-fragment": "^1.5.2",
+        "vue-tree-chart": "^1.2.9"
     }
 }
