--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vform": "^2.1.0",
         "vue-fragment": "^1.5.2",
         "vue-step-wizard": "^0.1.17",
-        "vue-tree-chart": "^1.2.9"
+        "vue-tree-chart": "^1.2.9",
+        "vue2-dropzone": "^3.6.0"
     }
 }
