--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vue-fragment": "^1.5.2",
         "vue-step-wizard": "^0.1.17",
         "vue-tree-chart": "^1.2.9",
+        "vue-yandex-maps": "^0.10.11",
         "vue2-dropzone": "^3.6.0"
     }
 }
