--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,24 @@
     "/js/landing.js": "/js/landing.js",
     "/css/app.css": "/css/app.css",
     "/css/landing-app.css": "/css/landing-app.css",
+    "/images/icons/icon-128x128.png": "/images/icons/icon-128x128.png",
+    "/images/icons/icon-144x144.png": "/images/icons/icon-144x144.png",
+    "/images/icons/icon-152x152.png": "/images/icons/icon-152x152.png",
+    "/images/icons/icon-192x192.png": "/images/icons/icon-192x192.png",
+    "/images/icons/icon-384x384.png": "/images/icons/icon-384x384.png",
+    "/images/icons/icon-512x512.png": "/images/icons/icon-512x512.png",
+    "/images/icons/icon-72x72.png": "/images/icons/icon-72x72.png",
+    "/images/icons/icon-96x96.png": "/images/icons/icon-96x96.png",
+    "/images/icons/splash-1125x2436.png": "/images/icons/splash-1125x2436.png",
+    "/images/icons/splash-1242x2208.png": "/images/icons/splash-1242x2208.png",
+    "/images/icons/splash-1242x2688.png": "/images/icons/splash-1242x2688.png",
+    "/images/icons/splash-1536x2048.png": "/images/icons/splash-1536x2048.png",
+    "/images/icons/splash-1668x2224.png": "/images/icons/splash-1668x2224.png",
+    "/images/icons/splash-1668x2388.png": "/images/icons/splash-1668x2388.png",
+    "/images/icons/splash-2048x2732.png": "/images/icons/splash-2048x2732.png",
+    "/images/icons/splash-640x1136.png": "/images/icons/splash-640x1136.png",
+    "/images/icons/splash-750x1334.png": "/images/icons/splash-750x1334.png",
+    "/images/icons/splash-828x1792.png": "/images/icons/splash-828x1792.png",
     "/assets/favicon.png": "/assets/favicon.png",
     "/assets/icon.png": "/assets/icon.png",
     "/assets/logo-icon.png": "/assets/logo-icon.png",
