--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
+        "vue": "^2.6.14",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.12",
         "vuelidate": "^0.7.6"
     },
     "dependencies": {
+        "@chenfengyuan/vue-qrcode": "^1.0.2",
         "@codekraft-studio/vue-record": "^0.0.3",
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "qrcode": "^1.4.4",
         "sweetalert2": "^11.0.18",
         "vee-validate": "^3.4.10",
         "vform": "^2.1.0",
