--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "vform": "^2.1.0",
         "vue-audio-recorder": "^3.0.1",
         "vue-fragment": "^1.5.2",
+        "vue-scrollto": "^2.20.0",
         "vue-step-wizard": "^0.1.17",
         "vue-tree-chart": "^1.2.9",
         "vue-yandex-maps": "^0.10.11",
