--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/js/base.js": "/js/base.js",
     "/js/landing.js": "/js/landing.js",
+    "/js/splide.min.js": "/js/splide.min.js",
     "/css/app.css": "/css/app.css",
     "/css/landing-app.css": "/css/landing-app.css",
     "/images/icons/icon-128x128.png": "/images/icons/icon-128x128.png",
