--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6",
+        "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
@@ -23,7 +24,10 @@
         "vue": "^2.6.14",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.12",
-        "vuelidate": "^0.7.6"
+        "vuelidate": "^0.7.6",
+        "vuex": "^3.0.1",
+        "laravel-echo": "^1.4.0",
+        "pusher-js": "^4.2.2"
     },
     "dependencies": {
         "@chenfengyuan/vue-qrcode": "^1.0.2",
