--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "devDependencies": {
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
         "cross-env": "^7.0.3",
+        "jquery": "^3.6",
+        "laravel-echo": "^1.4.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
+        "pusher-js": "^4.2.2",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
@@ -25,9 +27,7 @@
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.12",
         "vuelidate": "^0.7.6",
-        "vuex": "^3.0.1",
-        "laravel-echo": "^1.4.0",
-        "pusher-js": "^4.2.2"
+        "vuex": "^3.0.1"
     },
     "dependencies": {
         "@chenfengyuan/vue-qrcode": "^1.0.2",
@@ -40,6 +40,8 @@
         "vform": "^2.1.0",
         "vue-audio-recorder": "^3.0.1",
         "vue-fragment": "^1.5.2",
+        "vue-lazyload": "^1.3.3",
+        "vue-plugin-load-script": "^1.3.2",
         "vue-scrollto": "^2.20.0",
         "vue-step-wizard": "^0.1.17",
         "vue-tree-chart": "^1.2.9",
