--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/js/base.js": "/js/base.js",
     "/js/landing.js": "/js/landing.js",
     "/js/splide.min.js": "/js/splide.min.js",
+    "/js/carousel.js": "/js/carousel.js",
     "/css/app.css": "/css/app.css",
     "/css/landing-app.css": "/css/landing-app.css",
     "/images/icons/icon-128x128.png": "/images/icons/icon-128x128.png",
@@ -25,6 +26,7 @@
     "/images/icons/splash-828x1792.png": "/images/icons/splash-828x1792.png",
     "/assets/favicon.png": "/assets/favicon.png",
     "/assets/icon.png": "/assets/icon.png",
+    "/assets/loading.gif": "/assets/loading.gif",
     "/assets/logo-icon.png": "/assets/logo-icon.png",
     "/assets/logo.png": "/assets/logo.png",
     "/assets/landing-img/IconBig.png": "/assets/landing-img/IconBig.png",
