--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
         "@splidejs/splide": "^2.4.21",
         "moment": "^2.29.1",
         "qrcode": "^1.4.4",
-        "sweetalert2": "^11.0.18",
+        "sweetalert2": "^10.15.5",
         "vee-validate": "^3.4.10",
         "vform": "^2.1.0",
         "vue-audio-recorder": "^3.0.1",
         "vue-fragment": "^1.5.2",
         "vue-lazyload": "^1.3.3",
+        "vue-plain-pagination": "^0.3.0",
         "vue-plugin-load-script": "^1.3.2",
         "vue-scrollto": "^2.20.0",
         "vue-step-wizard": "^0.1.17",
