--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "socialiteproviders/vkontakte": "^4.2",
         "socialiteproviders/yandex": "^4.1",
         "socialiteproviders/zoho": "^4.1",
+        "spatie/laravel-permission": "^4.3",
         "tcg/voyager": "^1.4",
         "torann/geoip": "^3.0"
     },
