--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "socialiteproviders/yandex": "^4.1",
         "socialiteproviders/zoho": "^4.1",
         "spatie/laravel-permission": "^4.3",
+        "stevebauman/location": "^6.2",
         "tcg/voyager": "^1.4",
         "torann/geoip": "^3.0"
     },
