--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@codekraft-studio/vue-record": "^0.0.3",
         "@fortawesome/fontawesome-free": "^5.15.3",
         "@splidejs/splide": "^2.4.21",
+        "@splidejs/vue-splide": "^0.3.5",
         "moment": "^2.29.1",
         "qrcode": "^1.4.4",
         "sweetalert2": "^10.15.5",
