--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
         "ext-mysqli": "*",
         "atehnix/vk-client": "^1.4",
         "bensampo/laravel-enum": "^3.4",
+        "beyondcode/laravel-websockets": "^1.12",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "geoip2/geoip2": "^2.11",
         "guzzlehttp/guzzle": "^7.0.1",
         "jackmartin/laravel-yandex-geocode": "^1.2",
+        "kutia-software-company/larafirebase": "^1.3",
         "laravel-lang/lang": "~8.0",
         "laravel/framework": "^8.40",
         "laravel/scout": "^9.2",
