commit 48: try notifications

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "vue-lazyload": "^1.3.3",
         "vue-plain-pagination": "^0.3.0",
         "vue-plugin-load-script": "^1.3.2",
+        "vue-push-notification-preview": "^2.2.0",
         "vue-scrollto": "^2.20.0",
         "vue-step-wizard": "^0.1.17",
         "vue-tree-chart": "^1.2.9",
