--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
         "@chenfengyuan/vue-qrcode": "^1.0.2",
         "@codekraft-studio/vue-record": "^0.0.3",
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "@mdi/font": "^6.3.95",
         "@splidejs/splide": "^2.4.21",
         "@splidejs/vue-splide": "^0.3.5",
-        "firebase": "^9.1.2",
+        "dtoaster": "^0.1.4",
         "moment": "^2.29.1",
         "qrcode": "^1.4.4",
         "sweetalert2": "^10.15.5",
@@ -45,6 +46,7 @@
         "vue-audio-recorder": "^3.0.1",
         "vue-fragment": "^1.5.2",
         "vue-lazyload": "^1.3.3",
+        "vue-notification": "^1.3.20",
         "vue-plain-pagination": "^0.3.0",
         "vue-plugin-load-script": "^1.3.2",
         "vue-push-notification-preview": "^2.2.0",
