--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jackmartin/laravel-yandex-geocode": "^1.2",
         "kutia-software-company/larafirebase": "^1.3",
-        "laravel-lang/lang": "~8.0",
+        "laravel-lang/lang": "^10.1.8",
         "laravel/framework": "^8.40",
         "laravel/scout": "^9.2",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "mariuzzo/laravel-js-localization": "^1.8",
         "pusher/pusher-php-server": "v3.0.3",
         "silviolleite/laravelpwa": "^2.0",
         "socialiteproviders/facebook": "^4.1",
