--- a/package.json
+++ b/package.json
@@ -10,31 +10,34 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21.1",
-        "bootstrap": "^4.6.0",
+        "axios": "^0.24.0",
+        "bootstrap": "^4.6.1",
         "cross-env": "^7.0.3",
         "dotenv": "^10.0.0",
-        "jquery": "^3.6",
-        "laravel-echo": "^1.11.1",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
+        "jquery": "^3.6.0",
+        "lang.js": "^1.1.14",
+        "laravel-echo": "^1.11.3",
+        "laravel-mix": "^6.0.37",
+        "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
-        "postcss": "^8.1.14",
+        "postcss": "^8.3.11",
         "pusher-js": "^4.4.0",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.43.4",
+        "sass-loader": "^12.3.0",
         "vue": "^2.6.14",
-        "vue-loader": "^15.9.7",
-        "vue-template-compiler": "^2.6.12",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14",
         "vuelidate": "^0.7.6",
-        "vuex": "^3.0.1"
+        "vuex": "^3.6.2",
+        "webpack-shell-plugin-next": "^2.2.2"
     },
     "dependencies": {
         "@chenfengyuan/vue-qrcode": "^1.0.2",
         "@codekraft-studio/vue-record": "^0.0.3",
-        "@fortawesome/fontawesome-free": "^5.15.3",
-        "@mdi/font": "^6.3.95",
+        "@eli5/vue-lang-js": "^1.3.1",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "@mdi/font": "^6.4.95",
         "@splidejs/splide": "^2.4.21",
         "@splidejs/vue-splide": "^0.3.5",
         "dtoaster": "^0.1.4",
