commit 53: fixed, change locale middleware, language switcher, complete translations components

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -24,11 +24,13 @@
     "/images/icons/splash-640x1136.png": "/images/icons/splash-640x1136.png",
     "/images/icons/splash-750x1334.png": "/images/icons/splash-750x1334.png",
     "/images/icons/splash-828x1792.png": "/images/icons/splash-828x1792.png",
+    "/assets/en.png": "/assets/en.png",
     "/assets/favicon.png": "/assets/favicon.png",
     "/assets/icon.png": "/assets/icon.png",
     "/assets/loading.gif": "/assets/loading.gif",
     "/assets/logo-icon.png": "/assets/logo-icon.png",
     "/assets/logo.png": "/assets/logo.png",
+    "/assets/ru.png": "/assets/ru.png",
     "/assets/landing-img/IconBig.png": "/assets/landing-img/IconBig.png",
     "/assets/landing-img/IconSmall.png": "/assets/landing-img/IconSmall.png",
     "/assets/landing-img/IconStroke.png": "/assets/landing-img/IconStroke.png",
