--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "@chenfengyuan/vue-qrcode": "^1.0.2",
         "@codekraft-studio/vue-record": "^0.0.3",
+        "@dzangolab/vue-locale-switcher": "^0.10.4",
         "@eli5/vue-lang-js": "^1.3.1",
         "@fortawesome/fontawesome-free": "^5.15.4",
         "@mdi/font": "^6.4.95",
